--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <div class="flex flex-col space-y-8 mt-36">
 
             <div>
-                <button id="aboutbutton" class="text-white text-2xl font-bold hover:text-gray-300 transition">
+                <button id="aboutbutton" class="text-white text-xl font-bold
+               hover:text-gray-300 hover:scale-105
+               transition-transform duration-200 ease-in-out cursor-pointer">
                     About Me
                 </button>
                 <div id="aboutwindow" class="hidden fixed top-1/4 left-1/2 -translate-x-1/2 bg-gray-900 text-gray-300 rounded-lg shadow-lg w-[500px] p-6 z-50">
@@ -79,20 +81,25 @@
             </div>
 
             <div>
-                <button id="socialsbutton" class="text-white text-2xl font-bold hover:text-gray-300 transition">
+                <button id="socialsbutton" class="text-white text-xl font-bold
+               hover:text-gray-300 hover:scale-105
+               transition-transform duration-200 ease-in-out cursor-pointer">
                     Socials
                 </button>
+
                 <div id="socialswindow" class="hidden fixed top-1/4 left-1/2 -translate-x-1/2 bg-gray-900 text-gray-300 rounded-lg shadow-lg w-[300px] p-6 z-50 flex flex-col items-start">
                     <div class="flex justify-between items-center mb-4 w-full">
                         <h3 class="text-white text-xl font-bold">Socials</h3>
                         <button onclick="document.getElementById('socialswindow').classList.add('hidden')" class="text-gray-400 hover:text-white">✕</button>
                     </div>
-                    <div class="flex space-x-4">
+                    <div class="flex space-x-4 ">
                         <a href="https://discordapp.com/users/623856022796107776/" target="_blank">
-                            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" class="w-8 h-8">
+                            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" class="w-8 h-8 hover:scale-105
+               transition-transform duration-200 ease-in-out cursor-pointer">
                         </a>
                         <a href="https://github.com/lupqn" target="_blank">
-                            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="w-8 h-8">
+                            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="w-8 h-8 hover:scale-105
+               transition-transform duration-200 ease-in-out cursor-pointer">
                         </a>
                     </div>
                 </div>
@@ -111,6 +118,8 @@
     </div>
 
 </div>
+
+
 
 </body>
 </html>
